--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,11 +17,11 @@ html(lang="en")
     body 
         include navbar
         .container
-            .homeMsg
-                != messages('messages', locals)
-                if errors
-                    each error in errors 
-                        div(class="alert alert-danger") #{error.msg}
+            //- .homeMsg
+            //-     != messages('messages', locals)
+            //-     if errors
+            //-         each error in errors 
+            //-             div(class="alert alert-danger") #{error.msg}
             h1= page
             block home
             block add
