--- a/views/add.pug
+++ b/views/add.pug
@@ -7,10 +7,35 @@ block add
                 input#exampleInputEmail1.form-control(type='text' placeholder="Maxsulot nomi" name="title" value=datas.title)
             .mb-3
                 label.form-label(for="") Maxsulot Narxi
+                input#exampleInputPassword1.form-control(type='text' placeholder="Maxsulot narxi" name="price" value=datas.price)
+            .mb-3
+                label.form-label(for="") Chegirma
+                input#exampleInputPassword1.form-control(type='text' placeholder="chegirma foiz" name="sale" value=datas.sale)
+            .mb-3
+                label.form-label(for="") Maxsulot Rasmi
+                input#exampleInputPassword1.form-control(type='file' name="photo" value=datas.photo)
+            select(name="category" value=datas.caregory).form-select
+                option(value="avtomobil" selected) avtomobil  
+                option(value="Telefon") Telefon 
+                option(value="Kiyimlar") Kiyimlar  
+                option(value="Uylar") Uylar 
+                option(value="Uy hayvonlari") Uy hayvonlari 
+                option(value="Texnikalar") Texnikalar  
+                option(value="sport anjomlari") sport anjomlari  
+                option(value="boshqa maxsulotlar") boshqa maxsulotlar 
+            .mb-3
+                textarea(name="comments" aria-label="Username" cols="100" rows="10" value=datas.comments)
+            button.btn.btn-danger(type='submit')= button
+        else 
+            .mb-3
+            label.form-label(for='') Maxsulot nomi
+            input#exampleInputEmail1.form-control(type='text' placeholder="Maxsulot nomi" name="title")
+            .mb-3
+                label.form-label(for="") Maxsulot Narxi
                 input#exampleInputPassword1.form-control(type='text' placeholder="Maxsulot narxi" name="price")
             .mb-3
                 label.form-label(for="") Chegirma
-                input#exampleInputPassword1.form-control(type='text' placeholder="chegirma foiz" name="sale")
+                input#exampleInputPassword1.form-control(type='text' name="sale")
             .mb-3
                 label.form-label(for="") Maxsulot Rasmi
                 input#exampleInputPassword1.form-control(type='file' name="photo")
@@ -26,28 +51,3 @@ block add
             .mb-3
                 textarea(name="comments" aria-label="Username" cols="100" rows="10")  
             button.btn.btn-danger(type='submit')= button
-        else 
-            .mb-3
-            label.form-label(for='') Maxsulot nomi
-            input#exampleInputEmail1.form-control(type='text' placeholder="Maxsulot nomi" name="title")
-        .mb-3
-            label.form-label(for="") Maxsulot Narxi
-            input#exampleInputPassword1.form-control(type='text' placeholder="Maxsulot narxi" name="price")
-        .mb-3
-            label.form-label(for="") Chegirma
-            input#exampleInputPassword1.form-control(type='text' name="sale")
-        .mb-3
-            label.form-label(for="") Maxsulot Rasmi
-            input#exampleInputPassword1.form-control(type='file' name="photo")
-        select(name="category").form-select
-            option(value="avtomobil" selected) avtomobil  
-            option(value="Telefon") Telefon 
-            option(value="Kiyimlar") Kiyimlar  
-            option(value="Uylar") Uylar 
-            option(value="Uy hayvonlari") Uy hayvonlari 
-            option(value="Texnikalar") Texnikalar  
-            option(value="sport anjomlari") sport anjomlari  
-            option(value="boshqa maxsulotlar") boshqa maxsulotlar 
-        .mb-3
-            textarea(name="comments" aria-label="Username" cols="100" rows="10")  
-        button.btn.btn-danger(type='submit')= button
